--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,27 +1,29 @@
 {
   "packageName": "Hubitat IntelliFire",
   "author": "corinuss",
-  "version": "1.0",
-  "minimumHEVersion": "2.1.9",
+  "version": "0.6",
+  "minimumHEVersion": "0.0",
+  "licenseFile": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/LICENSE",
+  "documentationLink": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/README.md",
   "dateReleased": "2023-09-25",
+  "drivers": [
+    {
+      "id": "e4f1934b-7beb-4baf-a032-13dc0c7779f6",
+      "name": "IntelliFire Fireplace",
+      "namespace": "IntelliFire",
+      "location": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/Driver/IntelliFire_Fireplace.groovy",
+      "required": true
+    }
+  ],
   "apps": [
     {
-      "id": "03b42492-bb99-46a7-89cb-ce02d05e5d98",
+      "id": "bcf7712d-10f7-48da-8f5d-5d6203b3a146",
       "name": "IntelliFire Fireplace Manager",
       "namespace": "IntelliFire",
       "location": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/App/IntelliFire_Fireplace_Manager.groovy",
       "required": true,
       "oauth": false,
-      "primary": false
-    }
-  ],
-  "drivers": [
-    {
-      "id": "461731b4-539f-4dc8-bf18-cf6e9df59398",
-      "name": "IntelliFire Fireplace",
-      "namespace": "IntelliFire",
-      "location": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/Driver/IntelliFire_Fireplace.groovy",
-      "required": true
+      "primary": true
     }
   ]
 }
