--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,17 +1,24 @@
 {
   "packageName": "Hubitat IntelliFire",
   "author": "corinuss",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "minimumHEVersion": "0.0",
   "licenseFile": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/LICENSE",
   "documentationLink": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/README.md",
-  "dateReleased": "2023-09-25",
+  "dateReleased": "2023-11-13",
   "drivers": [
     {
       "id": "e4f1934b-7beb-4baf-a032-13dc0c7779f6",
       "name": "IntelliFire Fireplace",
       "namespace": "IntelliFire",
       "location": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/Driver/IntelliFire_Fireplace.groovy",
+      "required": true
+    },
+    {
+      "id": "2720828c-b5cf-40ed-9787-c26e4d64970c",
+      "name": "IntelliFire Fireplace Virtual Light",
+      "namespace": "IntelliFire",
+      "location": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/Driver/IntelliFire_Fireplace_Light.groovy",
       "required": true
     }
   ],
