--- a/packageManifest.json
+++ b/packageManifest.json
@@ -1,11 +1,12 @@
 {
   "packageName": "Hubitat IntelliFire",
   "author": "corinuss",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "minimumHEVersion": "0.0",
   "licenseFile": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/LICENSE",
   "documentationLink": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/README.md",
-  "dateReleased": "2023-11-29",
+  "communityLink": "https://community.hubitat.com/t/release-intellifire-driver/125053",
+  "dateReleased": "2024-01-15",
   "drivers": [
     {
       "id": "e4f1934b-7beb-4baf-a032-13dc0c7779f6",
