--- a/packageManifest.json
+++ b/packageManifest.json
@@ -6,7 +6,8 @@
   "licenseFile": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/LICENSE",
   "documentationLink": "https://raw.githubusercontent.com/corinuss/Hubitat_IntelliFire/main/README.md",
   "communityLink": "https://community.hubitat.com/t/release-intellifire-driver/125053",
-  "dateReleased": "2024-05-05",
+  "dateReleased": "2024-11-08",
+  "releaseNotes": "Supporting new firmware string variable name, which changed in firmware 3.12.0 (or 3.11.0).",
   "drivers": [
     {
       "id": "e4f1934b-7beb-4baf-a032-13dc0c7779f6",
